# conway-game-of-life

./: .gitmodules  CMakeLists.txt  README.md  errorcodebutbeautiful.txt  imgui.ini
lib/: imgui.ini
src/: file_manager.cpp  file_manager.hpp  game-config.hpp  game-of-life.cpp  game-of-life.hpp  index.html  main.cpp  predeclaration.h  predeclaration.hpp
src/file_manager/: file_manager.cpp  file_manager.hpp  file_manager.js
